--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>FEC Demo</title>
   </head>
   <body>
-    <img id="background" src="background.png">
+    <!-- <img id="background" src="background.png"> -->
     <div class="flex column">
       <div id="app"></div>
       <div class="flex">
@@ -15,19 +15,19 @@
       </div>
     </div>
 <!-- These two lines are just one way to get the React library running in the client's browser -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script>
-    <script src="http://localhost:3001/bundle.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
+    <!-- <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script> -->
+    <!-- <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script> -->
+    <!-- <script src="https://unpkg.com/styled-components/dist/styled-components.min.js"></script> -->
+    <!-- <script src="http://localhost:3001/bundle.js"></script> -->
+    <script src="http://ec2-54-200-65-2.us-west-2.compute.amazonaws.com:3005/main.js"></script>
     <!-- see: https://reactjs.org/docs/react-without-jsx.html -->
     <script>
-      Reservations.default.ReactDOM.render(
-        Reservations.default.React.createElement(Reservations.default.Reservations),
+      RecommendationsModule.ReactDOM.render(
+        RecommendationsModule.React.createElement(RecommendationsModule.App),
         document.getElementById('reservations')
       );
 
-      ReactDOM.render(React.createElement(App), document.getElementById('app'));
+      // ReactDOM.render(React.createElement(App), document.getElementById('app'));
     </script>
   </body>
 </html>
